#148: Added GetFilterAdjustmentSource and GetFilterAdjustmentSources UCs; added queries for Filter Adjustment Source objects